--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TW</title>
-    <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
-  </head>
-  <body class="p-6">
-    <section>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TW</title>
+  <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
+</head>
+
+<body class="p-6">
+  <section class="bg-blue-500 grid grid-cols-2">
+    <div>
+      <h2 class="text-white text-2xl p-8">We prove the best seo and digital marketing on demand</h2>
+      <p class="text-blue-200 text-sm pl-8">
+        All our content marketing service packages include a custom content
+        strategy All our content marketing service packages include a custom
+        content strategy.
+      </p>
       <div>
-        <h2>We prove the best seo and digital marketing on demand</h2>
-        <p>
-          All our content marketing service packages include a custom content
-          strategy All our content marketing service packages include a custom
-          content strategy.
-        </p>
-        <div>
-          <a href="#0">Get started</a>
-        </div>
+        <a class="bg-slate-900 text-white rounded-lg text-sm">Get started</a>
       </div>
-      <img src="hike.svg" alt="Hiker illustration" />
-    </section>
-  </body>
+    </div>
+    <img src="hike.svg" alt="Hiker illustration" />
+  </section>
+</body>
+
 </html>
